--- a/README
+++ b/README
@@ -1,7 +1,4 @@
-Materials and resources for the Software Carpentry bootcamp at HHMI May 6 & 7 2013.
+Materials and resources for the Software Carpentry bootcamps hosted by GERMS lab members.  Contributions by Fan Yang, Jared Flater, Jin Choi, and Adina Howe.
 
-To test your software setup please run check_setup/check_setup
 
-Minute Card Formlink:
 
-"https://docs.google.com/document/d/1G1ZjFXMk4zc4dgeZiQ-qIWyrm-cv7oQRUC9rrBuKUyM/edit"
